--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TrainingProgramCompose</string>
+    <string name="calendar">Calendar</string>
     <string name="training_list">Training</string>
     <string name="my_progress">Progress</string>
     <string name="workout">Workout</string>
