Weight reps new screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="RM">1RM - repetition maximum</string>
     <string name="M">M - weight lifted</string>
     <string name="r">r - reps</string>
+    <string name="save">Save</string>
 
 </resources>
