--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,5 @@
     <string name="M">M - weight lifted</string>
     <string name="r">r - reps</string>
     <string name="save">Save</string>
-
+    <string name="toast_calendar">Training will be available on:  </string>
 </resources>
