Dialog Date New

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="Note">Note</string>
     <string name="weight">Weight</string>
     <string name="reps">Reps</string>
-    <string name="selected_date">Selected date</string>
+    <string name="selected_date">Selected date: </string>
     <string name="note">Note</string>
     <string name="add">Add</string>
     <string name="weight_progress">Weight:</string>
@@ -32,4 +32,11 @@
     <string name="save">Save</string>
     <string name="toast_calendar">Training will be available on:  </string>
     <string name="no_data">No data: </string>
+    <string name="add_weight_reps_dialog">Add weight reps  </string>
+    <string name="edit_weight_reps_dialog">Edit weight reps №  </string>
+    <string name="delete_weight_reps_full_day">Delete all data for:  </string>
+    <string name="delete_weight_reps_number">Delete №  </string>
+    <string name="replace">Replace:  </string>
+    <string name="delete">Delete:  </string>
+    <string name="delete_all_workout_for">Delete all workout for</string>
 </resources>
